tests/paczka1/fuzzy1/73392238.err
Error in line 9: VuZhQfpqL S185 17,4
Error in line 14: nOy0Z5i7DH A2 56,0
Error in line 19: S185 A2 92,6
Error in line 27: bgQkN S356 56,4
Error in line 28: bgQkN S185 18,0
Error in line 36: 7wjLf S185 78,8
